--- a/app/src/main/res/drawable/outline_account_circle.xml
+++ b/app/src/main/res/drawable/outline_account_circle.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10s10,-4.48 10,-10S17.52,2 12,2zM7.35,18.5C8.66,17.56 10.26,17 12,17s3.34,0.56 4.65,1.5C15.34,19.44 13.74,20 12,20S8.66,19.44 7.35,18.5zM18.14,17.12L18.14,17.12C16.45,15.8 14.32,15 12,15s-4.45,0.8 -6.14,2.12l0,0C4.7,15.73 4,13.95 4,12c0,-4.42 3.58,-8 8,-8s8,3.58 8,8C20,13.95 19.3,15.73 18.14,17.12z"/>
-      
-    <path android:fillColor="@android:color/white" android:pathData="M12,6c-1.93,0 -3.5,1.57 -3.5,3.5S10.07,13 12,13s3.5,-1.57 3.5,-3.5S13.93,6 12,6zM12,11c-0.83,0 -1.5,-0.67 -1.5,-1.5S11.17,8 12,8s1.5,0.67 1.5,1.5S12.83,11 12,11z"/>
-    
+        <path android:pathData="M16 13.3334C18.9455 13.3334 21.3333 10.9455 21.3333 8.00002C21.3333 5.0545 18.9455 2.66669 16 2.66669C13.0544 2.66669 10.6666 5.0545 10.6666 8.00002C10.6666 10.9455 13.0544 13.3334 16 13.3334Z"
+            android:fillColor="@color/black"/>
+        <path android:fillAlpha="0.5"
+            android:pathData="M16 28C21.1546 28 25.3333 25.6122 25.3333 22.6666C25.3333 19.7211 21.1546 17.3333 16 17.3333C10.8453 17.3333 6.66663 19.7211 6.66663 22.6666C6.66663 25.6122 10.8453 28 16 28Z"
+            android:fillColor="@color/black"/>
 </vector>
