Fix Login Logout, Role Access, Setting Fragment

--- a/app/src/main/res/drawable/ic_logout.xml
+++ b/app/src/main/res/drawable/ic_logout.xml
@@ -1,9 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="48dp"
     android:height="48dp"
-    android:viewportWidth="960"
-    android:viewportHeight="960">
-  <path
-      android:pathData="M180,840q-24,0 -42,-18t-18,-42v-600q0,-24 18,-42t42,-18h299v60L180,180v600h299v60L180,840ZM666,655 L623,612 725,510L360,510v-60h363L621,348l43,-43 176,176 -174,174Z"
-      android:fillColor="#007859"/>
+    android:viewportWidth="48"
+    android:viewportHeight="48">
+  <group>
+    <path
+        android:pathData="M30 4H28C22.3432 4 19.5147 4 17.7574 5.75736C16 7.51472 16 10.3431 16 16V32C16 37.6568 16 40.4852 17.7574 42.2426C19.5147 44 22.3432 44 28 44H30C35.6568 44 38.4852 44 40.2426 42.2426C42 40.4852 42 37.6568 42 32V16C42 10.3431 42 7.51472 40.2426 5.75736C38.4852 4 35.6568 4 30 4Z"
+        android:fillColor="#007859"
+        android:fillAlpha="0.6" />
+    <path
+        android:pathData="M16 16C16 12.925 16 10.6857 16.2823 9H16C11.286 9 8.92894 9 7.46446 10.4645C6 11.9289 6 14.286 6 19V29C6 33.714 6 36.071 7.46446 37.5356C8.92894 39 11.286 39 16 39H16.2823C16 37.3142 16 35.075 16 32V25.5V22.5V16Z"
+        android:fillColor="#007859"
+        android:fillAlpha="0.4" />
+    <path
+        android:pathData="M8.93934 22.9394C8.35356 23.5252 8.35356 24.4748 8.93934 25.0606L12.9393 29.0606C13.5251 29.6464 14.4749 29.6464 15.0607 29.0606C15.6464 28.4748 15.6464 27.5252 15.0607 26.9394L13.6213 25.5H28C28.8284 25.5 29.5 24.8284 29.5 24C29.5 23.1716 28.8284 22.5 28 22.5H13.6213L15.0607 21.0606C15.6464 20.4748 15.6464 19.5251 15.0607 18.9393C14.4749 18.3536 13.5251 18.3536 12.9393 18.9393L8.93934 22.9394Z"
+        android:fillColor="#007859"
+        android:fillType="evenOdd" />
+  </group>
 </vector>
