--- a/app/src/main/res/layout/dialog_add_edit_pegawai.xml
+++ b/app/src/main/res/layout/dialog_add_edit_pegawai.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="16dp">
 
     <EditText
-        android:id="@+id/etNIK"
+        android:id="@+id/etUserId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/nik" />
+        android:hint="User ID" />
 
     <EditText
-        android:id="@+id/etAlamat"
+        android:id="@+id/etPosisi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/alamat"
+        android:hint="Posisi"
         android:layout_marginTop="8dp" />
 
     <Button
-        android:id="@+id/btnSavePegawai"
+        android:id="@+id/btnSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/save"
+        android:text="Simpan"
         android:layout_marginTop="16dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
