--- a/app/src/main/res/layout/item_pegawai.xml
+++ b/app/src/main/res/layout/item_pegawai.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_marginVertical="8dp"
+    android:layout_marginHorizontal="16dp"
+    android:padding="16dp"
     android:elevation="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tvNama"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvNamaPegawai"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nama Pegawai"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:text="Nama Pegawai" />
 
         <TextView
-            android:id="@+id/tvPosisi"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvPosisiPegawai"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Posisi"
-            android:textSize="14sp"
-            android:layout_marginTop="4dp" />
+            android:text="Posisi: Developer" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
