--- a/app/src/main/res/layout/fragment_absence.xml
+++ b/app/src/main/res/layout/fragment_absence.xml
@@ -82,21 +82,34 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivSelfiePreview" />
 
+    <ImageButton
+        android:id="@+id/btnCamera"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/login_round_button"
+        android:contentDescription="@string/camera_button_placeholder"
+        android:padding="8dp"
+        android:src="@drawable/icon_camera"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivSelfiePreview" />
+
     <Button
         android:id="@+id/btnSave"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="48dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
         android:drawableStart="@drawable/save_icon"
         android:drawableEnd="@drawable/save_icon"
         android:fontFamily="@font/poppins_regular"
         android:padding="8dp"
         android:text="@string/save_attendance"
         app:cornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivSelfiePreview" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
