--- a/app/src/main/res/layout/fragment_absence.xml
+++ b/app/src/main/res/layout/fragment_absence.xml
@@ -96,6 +96,15 @@
         app:layout_constraintTop_toBottomOf="@+id/ivSelfiePreview" />
 
     <Button
+        android:id="@+id/btnGallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gallery"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnCamera" />
+
+    <Button
         android:id="@+id/btnSave"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
