--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,13 @@
     tools:context=".ui.fragments.HomeFragment">
 
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".5" />
+
     <TextView
         android:id="@+id/tvGreetings"
         android:layout_width="wrap_content"
@@ -37,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/poppins_regular"
         android:text="@string/date_placeholder"
         android:textSize="12sp"
@@ -51,8 +58,10 @@
         android:layout_height="125dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="#EBEBEB"
         app:cardCornerRadius="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/vGuideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvDate">
 
@@ -109,11 +118,13 @@
         android:id="@+id/cvCheckout"
         android:layout_width="190dp"
         android:layout_height="125dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="#EBEBEB"
         app:cardCornerRadius="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/vGuideline"
         app:layout_constraintTop_toBottomOf="@id/tvDate">
 
         <View
@@ -171,8 +182,10 @@
         android:layout_height="125dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="#EBEBEB"
         app:cardCornerRadius="16dp"
+        app:layout_constraintEnd_toStartOf="@id/vGuideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cvAttendance">
 
@@ -250,11 +263,13 @@
         android:id="@+id/cvTotalAttended"
         android:layout_width="190dp"
         android:layout_height="125dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="#EBEBEB"
         app:cardCornerRadius="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/vGuideline"
         app:layout_constraintTop_toBottomOf="@id/cvCheckout">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -337,7 +352,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cvTotalAttended" />
+        app:layout_constraintTop_toBottomOf="@id/cvAbsent" />
 
     <LinearLayout
         android:id="@+id/TableHeader"
@@ -345,6 +360,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvAttendanceHistory">
