--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -30,14 +30,45 @@
                     android:orientation="horizontal"
                     app:layout_constraintGuide_percent="0.05" />
 
+                <LinearLayout
+                    android:id="@+id/headerSection"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp"
+                    android:background="@drawable/header_background"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent">
+
+                    <TextView
+                        android:id="@+id/tvWelcome"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_bold"
+                        android:text="@string/username_placeholder"
+                        android:textSize="24sp"
+                        android:textColor="@color/white" />
+
+                    <TextView
+                        android:id="@+id/tvSubWelcome"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_regular"
+                        android:text="@string/summary_account"
+                        android:textSize="14sp"
+                        android:textColor="@color/white" />
+                </LinearLayout>
+
                 <ImageView
                     android:id="@+id/ivAccountProfile"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
+                    android:layout_marginTop="32dp"
                     app:layout_constraintBottom_toTopOf="@+id/guideline2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/guideline"
+                    app:layout_constraintTop_toBottomOf="@id/headerSection"
                     tools:src="@tools:sample/avatars" />
 
                 <androidx.constraintlayout.widget.Guideline
@@ -53,6 +84,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/poppins_bold"
+                    android:textColor="@color/green_primary"
                     android:text="@string/usernameTitle"
                     android:textSize="40sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -60,16 +92,26 @@
                     app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
                 <TextView
+                    android:id="@+id/tvNip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text="@string/nipHint"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
+
+                <TextView
                     android:id="@+id/tvEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:fontFamily="@font/poppins_regular"
                     android:text="@string/email_username"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvNip" />
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guideline3"
