--- a/app/src/main/res/layout/attendance_history_table.xml
+++ b/app/src/main/res/layout/attendance_history_table.xml
@@ -4,8 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="4dp"
-    app:cardElevation="4dp"
-    app:cardCornerRadius="8dp">
+    android:backgroundTint="#EBEBEB"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
