--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -18,13 +18,15 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivLogoApp"
-            android:layout_width="350dp"
+            android:layout_width="0dp"
             android:layout_height="200dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/absen_logo_vector" />
+            app:srcCompat="@drawable/icon_app_full" />
 
         <TextView
             android:id="@+id/tvBranding"
