--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -66,7 +66,7 @@
                 <com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/barChart"
                     android:layout_width="0dp"
-                    android:layout_height="250dp"
+                    android:layout_height="300dp"
                     android:layout_marginTop="16dp"
                     app:layout_constraintBottom_toBottomOf="@id/vGuideline"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -80,14 +80,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    app:layout_constraintGuide_percent="0.5" />
+                    app:layout_constraintGuide_percent="0.3" />
 
                 <TableLayout
                     android:id="@+id/tlPaymentParameter"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_margin="8dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="24dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -132,7 +132,7 @@
                             android:text="@string/late" />
 
                         <TextView
-                            android:id="@+id/tvCut"
+                            android:id="@+id/tvLateMoney"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="end"
@@ -157,7 +157,7 @@
                             android:text="@string/absent_placeholder" />
 
                         <TextView
-                            android:id="@+id/tvCut2"
+                            android:id="@+id/tvAbsentMoney"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="end"
@@ -182,7 +182,7 @@
                             android:text="@string/overtime" />
 
                         <TextView
-                            android:id="@+id/tvCut3"
+                            android:id="@+id/tvOvertimeMoney"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="end"
@@ -205,13 +205,13 @@
                             android:text="@string/accumulated_fee" />
 
                         <TextView
-                            android:id="@+id/tvCut4"
+                            android:id="@+id/tvAccumulatedMoney"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="end"
+                            android:layout_weight="1"
                             android:gravity="end"
-                            android:text="@string/accumulated_fee"
-                            android:layout_weight="1" />
+                            android:text="@string/accumulated_fee" />
                     </TableRow>
                 </TableLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
