--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/italiana_regular"
             android:text="@string/branding"
             android:textAlignment="center"
             android:textColor="@color/neutral_white"
