--- a/app/src/main/res/layout/fragment_absence.xml
+++ b/app/src/main/res/layout/fragment_absence.xml
@@ -120,10 +120,24 @@
                     android:layout_marginStart="128dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="128dp"
-                    android:text="Gallery"
+                    android:text="@string/gallery_placeholder"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btnCamera" />
+
+                <Button
+                    android:id="@+id/btnCheckout"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="56dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="56dp"
+                    android:text="@string/caption_checkOut"
+                    android:visibility="gone"
+                    app:cornerRadius="15dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/btnGallery" />
 
                 <Button
                     android:id="@+id/btnSave"
@@ -141,6 +155,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btnGallery" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
