--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -20,13 +20,13 @@
             android:id="@+id/ivLogoApp"
             android:layout_width="0dp"
             android:layout_height="200dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginEnd="56dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/icon_app_full" />
+            app:srcCompat="@drawable/icon_app" />
 
         <TextView
             android:id="@+id/tvBranding"
