--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 <!-- Tema utama aplikasi -->
     <style name="Base.Theme.Aji" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">#007859</item>
@@ -15,6 +15,8 @@
     <style name="Theme.App.NoActionBar" parent="Base.Theme.Aji">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:forceDarkAllowed" tools:ignore="NewApi">false</item>
+
     </style>
 
     <style name="Theme.Aji" parent="Base.Theme.Aji" />
